# protoflow

./: README.md
lib/protoflow/: Cargo.toml
lib/protoflow-blocks/: Cargo.toml
lib/protoflow-blocks/doc/core/: map_from.mmd  map_from.seq.mmd
lib/protoflow-blocks/src/: block_config.rs  block_tag.rs  lib.rs  system.rs
lib/protoflow-blocks/src/blocks/: core.rs
lib/protoflow-blocks/src/blocks/core/: map_from.rs
lib/protoflow-blocks/src/blocks/sys/: write_file.rs
lib/protoflow-core/: Cargo.toml
lib/protoflow-crossbeam/: Cargo.toml
lib/protoflow-flume/: Cargo.toml
lib/protoflow-syntax/: Cargo.toml
lib/protoflow-zeromq/: Cargo.toml
